docs/api/qiskit/0.24/qiskit.qobj.PulseLibraryItem.mdx
---
title: PulseLibraryItem (v0.24)
description: API reference for qiskit.qobj.PulseLibraryItem in qiskit v0.24
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseLibraryItem
---

<span id="qiskit-qobj-pulselibraryitem" />

# qiskit.qobj.PulseLibraryItem

<Class id="qiskit.qobj.PulseLibraryItem" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/qobj/pulse_qobj.py" signature="PulseLibraryItem(name, samples)" modifiers="class">
  An item in a pulse library.

  Instantiate a pulse library item.

  **Parameters**

  *   **name** (*str*) – A name for the pulse.
  *   **samples** (*list\[complex]*) – A list of complex values defining pulse shape.

  ### \_\_init\_\_

  <Function id="qiskit.qobj.PulseLibraryItem.__init__" signature="__init__(name, samples)">
    Instantiate a pulse library item.

    **Parameters**

    *   **name** (*str*) – A name for the pulse.
    *   **samples** (*list\[complex]*) – A list of complex values defining pulse shape.
  </Function>

  ## Methods

  |                                                                                                             |                                                                      |
  | ----------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
  | [`__init__`](#qiskit.qobj.PulseLibraryItem.__init__ "qiskit.qobj.PulseLibraryItem.__init__")(name, samples) | Instantiate a pulse library item.                                    |
  | [`from_dict`](#qiskit.qobj.PulseLibraryItem.from_dict "qiskit.qobj.PulseLibraryItem.from_dict")(data)       | Create a new PulseLibraryItem object from a dictionary.              |
  | [`to_dict`](#qiskit.qobj.PulseLibraryItem.to_dict "qiskit.qobj.PulseLibraryItem.to_dict")()                 | Return a dictionary format representation of the pulse library item. |

  ### from\_dict

  <Function id="qiskit.qobj.PulseLibraryItem.from_dict" signature="from_dict(data)" modifiers="classmethod">
    Create a new PulseLibraryItem object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [PulseLibraryItem](#qiskit.qobj.PulseLibraryItem "qiskit.qobj.PulseLibraryItem")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.PulseLibraryItem.to_dict" signature="to_dict()">
    Return a dictionary format representation of the pulse library item.

    **Returns**

    The dictionary form of the PulseLibraryItem.

    **Return type**

    dict
  </Function>
</Class>

