docs/api/qiskit/1.2/qiskit.qobj.PulseLibraryItem.mdx
---
title: PulseLibraryItem (v1.2)
description: API reference for qiskit.qobj.PulseLibraryItem in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseLibraryItem
---

# PulseLibraryItem

<Class id="qiskit.qobj.PulseLibraryItem" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L533-L588" signature="qiskit.qobj.PulseLibraryItem(name, samples)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  An item in a pulse library.

  Instantiate a pulse library item.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.pulse_qobj.PulseLibraryItem` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – A name for the pulse.
  *   **samples** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*complex*](https://docs.python.org/3/library/functions.html#complex "(in Python v3.13)")*]*) – A list of complex values defining pulse shape.

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.PulseLibraryItem.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L566-L576" signature="from_dict(data)" modifiers="classmethod">
    Create a new PulseLibraryItem object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [PulseLibraryItem](#qiskit.qobj.PulseLibraryItem "qiskit.qobj.PulseLibraryItem")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.PulseLibraryItem.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L558-L564" signature="to_dict()">
    Return a dictionary format representation of the pulse library item.

    **Returns**

    The dictionary form of the PulseLibraryItem.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

